<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">udpRC4UGV</string>
    <string name="app_name_version">udpRC4UGV 1.4</string>
    <string name="menu_app_settings">APP Settings</string>
    <string name="menu_ssc_settings">SSC Settings</string>
    <string name="menu_about">About udpRC4UGV</string>

    <string name="title_activity_main">udpRC4UGV</string>
    <string name="title_activity_accelerometer">udpRC4UGV - Accelerometer control</string>
    <string name="title_activity_wheel">udpRC4UGV - Virtual Wheel</string>
    <string name="title_activity_buttons">udpRC4UGV - Button control</string>
    <string name="title_activity_touch">udpRC4UGV - Touch control</string>
    <string name="title_activity_mcu">udpRC4UGV - MCU settings</string>
    <string name="title_activity_about">udpRC4UGV - About</string>
    <string name="title_activity_send_to_uri">udpRC4UGV - SendToUri</string>
    <string name="title_activity_udpReceiver">udpRC4UGV - udpReceiver</string>
    <string name="plugin_name">udpRC4UGV - UDP Sender</string>

    <string name="info_text">Tilt your device</string>
    <string name="info_text_wheel">Pinch speed\'s slider\nand tilt device \nleft&#47;right for turning</string>
    
    <string name="btn_accel">Accelerometer control</string>
    <string name="btn_wheel">Wheel control</string>    
    <string name="btn_button">Button control</string>
    <string name="btn_touch">Touch control</string>

    <string name="forward">forward</string>
    <string name="backward">backward</string>
    <string name="left">left</string>
    <string name="right">right</string>

    <string name="default_channelForwardBackward">2</string>
    <string name="default_channelLeftRight">1</string>

    <string name="mcu_textInfo1">Settings for the PiKoder&#47;SSC. The parameters are transferred and stored in the PiKoder&#47;SSC\'s EEPROM memory.</string>
	<string name="text_about">Please go to <a href="http://www.pikoder.com">www.pikoder.com</a> for more information.</string>
	<string name="mcu_textStop">Stop when the connection is lost:</string>
	<string name="mcu_cBox_AutoOFF">On</string>
	<string name="mcu_after_sec">After (second):</string>
	<string name="mcu_flash_Read">Read data</string>
	<string name="mcu_flash_Write">Write data</string>
	
	<string name="mcu_error_range">Enter the correct value (00.1 &#8211; 99.9)</string>
	<string name="err_data_entry">Data entry error</string>
	<string name="flash_success">Data successfully written to EEPROM</string>
	<string name="error_get_data">Data receive error</string>

    <string name="default_udpReceiverHotSpotName">PiKoder_wRX</string>
    <string name="default_networkPasskey">password</string>
	<string name="default_IP">192.168.4.1</string>
    <string name="default_PORT">12001</string>
    <string name="default_rxPORT">12000</string>
    <string name="default_xR">5</string>
    <string name="default_xMax">7</string>
    <string name="default_yMax">5</string>  
    <string name="default_yThreshold">50</string> 
    <string name="default_commandLeft">1</string>
    <string name="default_commandRight">2</string>
    <string name="default_commandHorn">3</string>
    <string name="default_FlightModeChannel">8</string>
    <string name="default_xRperc">50</string>
    <string name="default_pwmMAX">126</string>

    <string name="default_FlightMode">2</string>
    <string name="default_FlightModeOutput">8</string>
    <string name="defaultFM_AUTO_PWM">1165</string>
    <string name="defaultFM_LEARNING_PWM">1425</string>
    <string name="defaultFM_MANUAL_PWM">1815</string>

    <string name="hello">You accepted the EULA!</string>
    <string name="eula">End User License Agreement (EULA): This is a legal agreement (AGREEMENT) between you (USER) and the owner of the copyright Gregor Schlechtriem (OWNER) covering the use of udpRC4UGV (APPLICATION).\n\tBy clicking the \"I Agree\" button, USER is agreeing to be bound by the terms and conditions of the AGREEMENT.\n\t1 a) APPLICATION is provided as freeware, but only for private, non-commercial use. This includes educational use (schools, universities, museums and libraries) and the use in charity or humanitarian organizations.\n\t1 b) For commercial applications USER is required to register and purchase an APPLICATION license. In this instance, USER is requested to contact OWNER by E-Mail at sales@pikoder.com for prices, discounts and payment methods.\n\t2) APPLICATION is protected by copyright laws for download and international treaty provisions.\n\t3) USER may not distribute, rent, sub-license or otherwise make available APPLICATION to others or documentation or copies thereof, except as expressly permitted in the AGREEMENT without prior
written consent from OWNER. In the case of an authorized transfer, the transferee must agree to be bound by the terms and conditions of the AGREEMENT.\n\t4) USER may not remove any proprietary notices, labels, trademarks on APPICATION or
documentation. USER may not modify, de-compile, disassemble or reverse engineer APPLICATION.\n\t5) Limited warranty: APPLICATION comes without any warranty as to performance, merchantability or fitness for any particular purpose. USER assumes the entire risk as to the quality and performance of APPLICATION. In no event shall OWNER or anyone else who has been involved in the creation, development, production, or delivery of APPLICATION be liable for any direct, incidental or consequential damages, such as, but not limited to, loss of anticipated profits, benefits, use, or data resulting from the use of APPLICATION, or arising out of any breach of warranty.\n\nCopyright 2017-2018 by Gregor Schlechtriem\n\nInternet: http://www.pikoder.com</string>
    <string name="updates">Updates in this version: Assign direction and throttle channel for required PPM frame position.</string>

</resources>