<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/pikoder_logo"
        android:contentDescription="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.35"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:src="@drawable/pikoder_logo"
        android:layout_below="@+id/logo_final"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/forward"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:gravity="left|center_vertical"
        android:text="@string/forward"
        android:textSize="20sp"
        android:layout_above="@+id/backward"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/backward"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:gravity="left|center_vertical"
        android:text="@string/backward"
        android:textSize="20sp"
        android:layout_below="@+id/right"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20sp" />

    <Button
        android:id="@+id/right"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:gravity="right|center_vertical"
        android:text="@string/right"
        android:textSize="20sp"
        android:layout_marginTop="18dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/left"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:gravity="right|center_vertical"
        android:text="@string/left"
        android:textSize="20sp"
        android:layout_below="@+id/right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20sp" />

    <ImageView
        android:id="@+id/logo_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:alpha="0.35"
        android:contentDescription="@+id/app_name"
        android:cropToPadding="false"
        android:paddingBottom="5dp"
        android:src="@drawable/logo_final"
        android:layout_alignTop="@+id/forward"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonCH7On"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CH7"
        android:textStyle="bold"
        android:layout_alignTop="@+id/pikoder_logo"
        android:layout_alignEnd="@+id/backward"
        android:layout_alignBottom="@+id/buttonAUTO" />

    <Button
        android:id="@+id/buttonAUTO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AUTO"
        android:layout_marginEnd="24dp"
        android:layout_alignBaseline="@+id/buttonLEARNING"
        android:layout_alignBottom="@+id/buttonLEARNING"
        android:layout_toStartOf="@+id/left" />

    <Button
        android:id="@+id/buttonLEARNING"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LEARNING"
        android:layout_alignBaseline="@+id/buttonMANUAL"
        android:layout_alignBottom="@+id/buttonMANUAL"
        android:layout_toStartOf="@+id/buttonMANUAL" />

    <Button
        android:id="@+id/buttonMANUAL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MANUAL"
        android:layout_alignBottom="@+id/pikoder_logo"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#555A6E"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textStyle="bold"
        android:text="Flight Mode Selection"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:layout_above="@+id/buttonAUTO"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/buttonAUTO" />

</RelativeLayout>
